# vhdlyze

./: Cargo.toml  LICENSE
src/: lexer.rs  message.rs  source.rs  weak_opt.rs
src/lexer/: char_class_table_gen.py  token.rs
