# Copyright (C) 2021 xq-Tec GmbH

[package]
name = "vhdlyze"
version = "0.0.1"
authors = ["adrian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1"
hashbrown = { version = "0.9", default-features = false, features = ["inline-more"] }
lazy_static = "1"
parking_lot = "0.11"
peg = "0.6"
